# trend-keyword-cafe

./: .env.example  .gitignore  README.md  STATUS.md  app.py  pyproject.toml  requirements.txt  vercel.json
config/: rss_sources.yml
docs/: topic-radar-mvp-spec.md
public/: index.html
public/data/: summary.json
scripts/: export_static_dashboard.py  run_daily_pipeline.ps1  run_dashboard.py  run_pipeline.py
src/: __init__.py
src/analysis/: __init__.py  community_niches.py  community_topics.py  trend_compare.py
src/collectors/: __init__.py  google_trends.py  http_client.py  kakao_search.py  naver_search.py  naver_search_ad.py  rss_feeds.py  youtube.py
src/dashboard/: __init__.py  app.py
src/processors/: __init__.py  content_extractor.py  keyword_extractor.py  korean_nlp.py
src/storage/: __init__.py  database.py  models.py
