[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topic-radar"
version = "0.1.0"
description = "커뮤니티 주제 발굴용 일일 키워드 다이제스트 MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "keybert>=0.8.5",
    "kiwipiepy>=0.17.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "sentence-transformers>=2.7.0",
    "sqlmodel>=0.0.16",
    "streamlit>=1.36.0",
    "trafilatura>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0.12.20240311",
    "types-requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
